fixed date alignment && refresh page @ month filter change

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .App {
   text-align: center;
+  border-radius: 12px;
 }
 
