--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -1,7 +1,8 @@
 .calendar {
   padding: 1rem;
-  background-color: rgb(31, 31, 31);
+  background-color: rgb(116, 115, 115);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
+  border-radius: 25px;
 }
