--- a/src/components/Calendar/MonthFilter.module.css
+++ b/src/components/Calendar/MonthFilter.module.css
@@ -1,6 +1,12 @@
+.card {
+  padding: 0px 0px 5px 0px;
+  margin: 0px 0px 10px 0px;
+}
+
 .months-filter {
   color: white;
-  padding: 0 1rem;
+  padding: 0 0 5rem;
+  margin: 2rem 0 2rem 0;
 }
 
 .months-filter__control {
@@ -8,7 +14,7 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  margin: 1rem 0;
+  margin: 2rem 0 2rem 0 ;
 }
 
 .months-filter label {
@@ -18,7 +24,7 @@
 
 .months-filter select {
   font: inherit;
-  padding: 0.5rem 3rem;
+  padding: 2rem 3rem 2rem;
   font-weight: bold;
   border-radius: 6px;
 }
